tests/expectations/compiler/const_generics/const_generics_non_inline.out
Error [ETYC0372143]: Only `inline` functions can have generic const parameters.
    --> compiler-test:14:16
     |
  14 |     transition bar1::[N: u32]() { }
     |                ^^^^
Error [ETYC0372143]: Only `inline` functions can have generic const parameters.
    --> compiler-test:16:22
     |
  16 |     async transition bar2::[N: u32]() -> Future {
     |                      ^^^^
Error [ETYC0372143]: Only `inline` functions can have generic const parameters.
    --> compiler-test:1:10
     |
   1 | function foo1::[N: u32](x: u32) -> u32 {
     |          ^^^^
Error [ETYC0372143]: Only `inline` functions can have generic const parameters.
    --> compiler-test:5:16
     |
   5 | async function foo2::[N: u32](x: u32) { }
     |                ^^^^
Error [ETYC0372143]: Only `inline` functions can have generic const parameters.
    --> compiler-test:8:8
     |
   8 | script baz::[N: u32]()  { }
     |        ^^^
